--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "wrrstudio",
+  "description": "Wayne Ruff Studio's Website",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Joshua Ruff",
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.0.66",
